@@ -8,3 +8,5 @@ export const labelsPrint = () => `${ namespace }label/print`;
 export const labelTestPrint = () => `${ namespace }label/preview`;
 
 export const selfHelp = () => `${ namespace }self-help`;
+
+export const refreshServiceData = () => `${ namespace }service-data-refresh`;
