@@ -1,0 +1,3 @@
+export const PLUGIN_STATUS_DEBUG_TOGGLE = 'PLUGIN_STATUS_DEBUG_TOGGLE';
+export const PLUGIN_STATUS_LOGGING_TOGGLE = 'PLUGIN_STATUS_LOGGING_TOGGLE';
+export const SERVICE_DATA_REFRESH = 'SERVICE_DATA_REFRESH';
